# broadcasting-algorithm

./: .gitignore  CMakeLists.txt  LICENSE  README.md
apps/: benchmark.cpp  generate.cpp  solve.cpp  test1.cpp  test2.cpp  test3.cpp  test4.cpp
benchmark/: benchmark.sh
benchmark/slurm_scripts/: fixed_k5.sh  fixed_n1e5.sh  fixed_n1e5_k8_a.sh  fixed_n1e5_k8_b.sh  fixed_n1e5_k8_c.sh  fixed_n1e5_k8_d.sh  fixed_n1e5_k8_e.sh  fixed_n1e5_k8_f.sh  fixed_n1e5_k8_g.sh  fixed_n1e5_k8_h.sh  fixed_n1e5_k8_i.sh  fixed_n1e5_k8_j.sh  small_example.sh  varying_k_fixed_n1e5.sh  varying_n_fixed_k5.sh
benchmark/slurm_scripts/output/: varying_k_fixed_n1e5_57518476.txt  varying_n_fixed_k5_57518129.txt
data/: example_graph.txt  example_protocol.txt
include/broadcast/algorithms/: cyclomatic.hpp  dp.hpp  enumeration.hpp
include/broadcast/utilities/: generator.hpp  graph.hpp  hash.hpp  matching.hpp  protocol.hpp  solve_tree.hpp  spanning_trees.hpp  timer.hpp  verbose.hpp
src/broadcast/algorithms/: cyclomatic.cpp  dp.cpp  enumeration.cpp
src/broadcast/utilities/: generator.cpp  graph.cpp  hash.cpp  matching.cpp  protocol.cpp  solve_tree.cpp  spanning_trees.cpp  timer.cpp  verbose.cpp
tests/: test_algorithms.cpp  test_generator.cpp  test_graph.cpp  test_matching.cpp  test_protocol.cpp  test_solve_tree.cpp  test_spanning_trees.cpp
